# tic_tac_toe_ai

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data.csv  example_save.txt  game_board.h  hidden_layer.h  main-2.cpp  main.cpp  model1.txt.txt  model2.txt  model2.txt.txt  neural_network.h  node.h  tic_tac_toe_ai
include/: game_board.h  hidden_layer.h  neural_network.h  node.h
src/: game_board.cpp  hidden_layer.cpp  main.cpp  neural_network.cpp  node.cpp
